--- a/algs4/1.1/1129.md
+++ b/algs4/1.1/1129.md
@@ -6,6 +6,20 @@
 2. count()。依旧先调用二分查找，找到 key 对应的序号。因为有重复元素，考虑利用双指针的思路，分别从找到序号的前一位和后一位开始查找和 key 相等的元素，统计个数即可。
 
 ``` python
+def test1122(self, arr, key, lo, hi, dep):
+    if lo > hi:
+        return -1
+    dep += 1
+    s = ' ' * dep
+    print(f'{s}lo:{lo}, hi:{hi}')
+    mid = lo + (hi-lo)//2
+    if key < arr[mid]:
+        return self.test1122(arr, key, lo, mid-1, dep)
+    elif key > arr[mid]:
+        return self.test1122(arr, key, mid+1, hi, dep)
+    else:
+        return mid
+
 def rank(self, key, a):
     n = len(a)
     res = self.test1122(a, key, 0, n-1, 0)
