--- a/algs4/1.1/1130.md
+++ b/algs4/1.1/1130.md
@@ -16,4 +16,5 @@ def test1130(self, n):
             if gcd(i, j) == 1:
                 print(f'i:{i} j:{j}')
                 res[i][j] = True
+     return res
 ```
