--- a/algs4/1.1/1135.md
+++ b/algs4/1.1/1135.md
@@ -14,3 +14,64 @@ dist[i] 的值就是两个骰子之和为 i 的概率。用实验模拟 N 次掷
 
 
 解答：
+题目中计算概率的程序，对应的 python 版本：
+
+``` python
+def calSides():
+    sides = 6
+    dist = [0 for i in range(0, 2*sides+1)]
+    for i in range(1, 7):
+        for j in range(1, 7):
+            dist[i+j] += 1.0
+    for i in range(2, 2*sides+1):
+        dist[i] /= 36.0
+    return dist
+```
+运行结果：
+
+```
+2的概率：0.027777777777777776
+3的概率：0.05555555555555555
+4的概率：0.08333333333333333
+5的概率：0.1111111111111111
+6的概率：0.1388888888888889
+7的概率：0.16666666666666666
+8的概率：0.1388888888888889
+9的概率：0.1111111111111111
+10的概率：0.08333333333333333
+11的概率：0.05555555555555555
+12的概率：0.027777777777777776
+```
+
+解答思路其实很简单，每次获取两次 1-6 之间的随机数，计算相加的和，重复 N 次，计算两数之和，2-12 之间各个数字出现的概率即可。
+
+``` python
+def test11351(self, n):
+	sides = 6
+	cnt = [0 for i in range(0, 2*sides+1)]
+	for i in range(0, n):
+	    fir = random.randint(1, 6)
+	    sec = random.randint(1, 6)
+	    cnt[fir+sec] += 1
+	    # print(f'{fir} - {sec}')
+	dist = [0 for i in range(0, 2*sides+1)]
+	for i in range(2, 2*sides+1):
+	    dist[i] = cnt[i]/n
+	for i in range(2, len(dist)):
+	    print(f'抛掷{n}次后，{i}的概率：{dist[i]}')
+```
+当 n = 10^7 时，输出结果：
+
+```
+抛掷10000000次后，2的概率：0.027756
+抛掷10000000次后，3的概率：0.0555262
+抛掷10000000次后，4的概率：0.0832428
+抛掷10000000次后，5的概率：0.1109801
+抛掷10000000次后，6的概率：0.1391048
+抛掷10000000次后，7的概率：0.166557
+抛掷10000000次后，8的概率：0.1388216
+抛掷10000000次后，9的概率：0.1112444
+抛掷10000000次后，10的概率：0.0833929
+抛掷10000000次后，11的概率：0.0555018
+抛掷10000000次后，12的概率：0.0278724
+```
