--- a/algs4/1.2/126.md
+++ b/algs4/1.2/126.md
@@ -2,6 +2,7 @@
 
 
 解答：
+首先，如果字符串长度不一样，肯定不是回文。再根据回文的定义，假如将其中一个字符串拼接两次，另外一个字符串如果是回文则必定是新字符串的子串，便宜的位置即为需要移动的位置。
 
 ```
 def test126(self, str1:str, str2:str):
