--- a/algs4/1.2/1210.md
+++ b/algs4/1.2/1210.md
@@ -1,1 +1,40 @@
 #### 题目：编写一个类 VisualCounter，支持加一和减一操作。它的构造函数接受两个参数 N 和 max，其中 N 指定了操作的最大次数，max 指定了计数器的最大绝对值。作为副作用，用图像显示每次计数器变化后的值。
+
+这里用 `print` 代替了图像显示。先判断操作数是否超过限制，然后再判断计数器是否超出规定的界限。都不超过，才会对计数器进行操作。
+
+``` python
+class VisualCounter:
+
+    def __init__(self, n, max):
+        super().__init__()
+        self.n = n
+        self.max = max
+        self.val = 0
+        self.opTime = 0
+
+    def plus(self):
+        if not self._checkOptTimes():
+            return
+        if self.val >= self.max:
+            print('reach max value, could not plus')
+            return
+        self.val += 1
+        print(f'counter:{self.val}')
+        self.opTime += 1
+
+    def minus(self):
+        if not self._checkOptTimes():
+            return
+        if self.val <= 0:
+            print('reach negative value, could not minus')
+            return
+        self.val -= 1
+        print(f'counter:{self.val}')
+        self.opTime += 1
+    
+    def _checkOptTimes(self):
+        if self.opTime >= self.n:
+            print('operate time reach max counts')
+            return False
+        return True
+```
