--- a/algs4/1.2/1211.md
+++ b/algs4/1.2/1211.md
@@ -17,3 +17,26 @@ class Date:
     def getYear(self):
         return self.year
 ```
+
+解答：只是简单的一些判断，在初始化方法中，判断月份的合法性，2月份时 day 的合法性以及 31 天或者 30 天的判断。
+
+``` python
+class SmartDate(Date):
+    def __init__(self, month:int, day:int, year:int):
+        if month > 12 or month <= 0:
+            raise ValueError('month is not legal')
+        if day <= 0:
+            raise ValueError('day is not legal')
+        if month == 2 and day > 28:
+            raise ValueError('in Feb, day must small than 28')
+        evenMonth = [1, 3, 5, 7, 8, 10, 12]
+        if month in evenMonth:
+            if day > 31:
+                raise ValueError(f'in month: {month}, day must small than 31')
+            else:
+                pass
+        else:
+            if day > 30:
+                raise ValueError(f'in month: {month}, day must small than 30')
+        super().__init__(month, day, year)
+```
