--- a/algs4/1.2/1212.md
+++ b/algs4/1.2/1212.md
@@ -1,6 +1,17 @@
-#### 题目：为 SmartDate 添加一个方法 dayOfTheWeek()，为日期中每周的日返回 Monday、Tuesday 等星期。你可以嘉定时间是 21 世纪。
+#### 题目：为 SmartDate 添加一个方法 dayOfTheWeek()，为日期中每周的日返回 Monday、Tuesday 等星期。你可以假定时间是 21 世纪。
 
 解答：
+
+1. 直接调用日历 api 。
+2. 使用 [蔡勒公式](https://zh.wikipedia.org/wiki/%E8%94%A1%E5%8B%92%E5%85%AC%E5%BC%8F)。公式：
+	
+	w = (y + y/4+c/4-2\*c + 26\*(m+1) + d - 1) % 7
+	
+	其中，w：星期，0-星期日，1-星期一...
+	c：年份前两位数
+	y：年份后两位数
+	m：月份，蔡勒公式中，某年的1、2月要看作上一年的13、14月来计算
+	d：日
 
 ``` python
 class SmartDate(Date):
