--- a/algs4/1.2/1212.md
+++ b/algs4/1.2/1212.md
@@ -5,13 +5,15 @@
 1. 直接调用日历 api 。
 2. 使用 [蔡勒公式](https://zh.wikipedia.org/wiki/%E8%94%A1%E5%8B%92%E5%85%AC%E5%BC%8F)。公式：
 	
-	w = (y + y/4+c/4-2\*c + 26\*(m+1) + d - 1) % 7
+	w = (y + y/4+c/4-2\*c + 26\*(m+1)/10 + d - 1) % 7
 	
-	其中，w：星期，0-星期日，1-星期一...
-	c：年份前两位数
-	y：年份后两位数
-	m：月份，蔡勒公式中，某年的1、2月要看作上一年的13、14月来计算
+	其中，   
+	w：星期，0-星期日，1-星期一...   
+	c：年份前两位数   
+	y：年份后两位数   
+	m：月份，蔡勒公式中，某年的1、2月要看作上一年的13、14月来计算   
 	d：日
+	
 
 ``` python
 class SmartDate(Date):
@@ -32,4 +34,24 @@ class SmartDate(Date):
             if day > 30:
                 raise ValueError(f'in month: {month}, day must small than 30')
         super().__init__(month, day, year)
+        
+    def dayOfTheWeek(self):
+        weekNames = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
+        # w = (y + y/4+c/4-2*c + 26*(m+1)/10 + d - 1) % 7
+        tempYear = self.getYear()
+        tempMon = self.getMonth()
+        # 1、2 月要转换成 13、14月，同时年份减1
+        if self.getMonth() < 3:
+            tempMon = 12+self.getMonth()
+            tempYear -= 1
+        # year 的前两位
+        cen = tempYear // 100
+        # year 的后两位
+        ye = tempYear%100
+        w = (ye+ye//4 + cen//4 - 2*cen + 26*(tempMon+1)//10+self.getDay()-1)%7
+        w = -2
+        # 防止 w 出现负数，python 负数其实计算也没问题
+        if w < 0:
+            w = (w%7+7)%7
+        return weekNames[w]
 ```
