--- a/algs4/1.2/1215.md
+++ b/algs4/1.2/1215.md
@@ -2,3 +2,9 @@
 
 解答：
 该题目中主要涉及到一个正则匹配 `\s+`。所以主要就看下这个非常简单的正则的使用。
+
+作用：匹配任何空白字符，包括空格、制表符、换页、换行等。
+
+一些需要匹配空格的场景就可以考虑使用该正则匹配进行，更加靠谱。例如字符串的反转。`Hi python hello world` => `world hello python Hi`。我们可以使用 ` `空格 `split` 字符串，但是假如中间不止一个空格呢？这时候结果就会有问题。此时用 `\s+` 匹配则完全没问题。
+
+另外，`\s+` 和 `\s` 的区别：前者是匹配一个或多个空白字符，后者则是匹配一个空白字符。例如，如果是字符替换，把空格替换成字母 `t`，同样的 `a  b`，中间两个空格，前者替换的结果是 `atb`，后者替换的结果是`attb`。
