--- a/algs4/1.2/1216.md
+++ b/algs4/1.2/1216.md
@@ -1,7 +1,7 @@
 #### 题目：有理数。为有理数实现一个不可变数据类型 Rational，支持加减乘除操作。
 
 解答：
-分数的加减乘除操作，结合欧几里得消除公约数。
+分数的加减乘除操作，结合欧几里得消除公约数。在 初始化方法中，再加入对数字溢出的判断更合理，也即1.2.17题目。
 
 ``` python
 class Rational:
