--- a/algs4/1.3/139.md
+++ b/algs4/1.3/139.md
@@ -40,3 +40,33 @@ print(val.pop())
 | 前序表达式 | `+/*23-21*3-41`
 | 后序表达式 | `23*21-/341-*+`
 
+
+#### 1.3.10 题目：编写一个过滤器 InfixToPostfix，将算术表达式由中序表达式转为后序表达式。
+
+解答：这个题目和上一个类似，无非就是转换成的字符串不一样。当遇到`)`时，我们先拼两个数字，再拼上运算符即可。
+
+``` python
+val = Stack()
+op = Stack()
+ops = ['+', '-', '*', '/']
+# s = '((1+2)*((3-4)*(5-6)))'
+s = '(a+(b*(c+(d/e))))'
+if len(s) < 3:
+    raise ValueError('target string is illegal')
+for obj in s:
+    if obj in ops:
+        op.push(obj)
+    elif obj == ')':
+        secVal = val.pop()
+        # 只改这一行即可
+        res = (f'{val.pop()}{secVal}{op.pop()}')
+        val.push(res)
+    elif obj == '(':
+        pass
+    else:
+        val.push(obj)
+
+print(val.pop())
+```
+样例：输入 `s = '(a+(b*(c+(d/e))))'` 时输出 `abcde/+*+`；
+输入 `s = '((1+2)*((3-4)*(5-6)))'` 时输出 `12+34-56-**`。
