--- a/algs4/1.3/139.md
+++ b/algs4/1.3/139.md
@@ -70,3 +70,34 @@ print(val.pop())
 ```
 样例：输入 `s = '(a+(b*(c+(d/e))))'` 时输出 `abcde/+*+`；
 输入 `s = '((1+2)*((3-4)*(5-6)))'` 时输出 `12+34-56-**`。
+
+#### 1.3.11 题目：编写一个过滤器 EvaluatePostfix，计算后序表达式的值。
+
+解答：和中序的 evaluate 类似，后序表达式还有一个好处，不用判断括号。不过在中序转后序的表达式里，括号一定要加全，每一个运算符都对应一对括号，少的话转换就会有问题，导致最后计算的结果也有问题。
+就像 `(1+1)/(2+2)` 就不对，少了最外边一个括号。
+
+``` python
+def evaluatePostfix(self, s:str):
+        val = Stack()
+        ops = ['+', '-', '*', '/']
+        if len(s) < 3:
+            raise ValueError('target string is illegal')
+        for obj in s:
+            if obj in ops:
+                secVal = val.pop()
+                firVal = val.pop()
+                res = 0
+                if obj == '+':
+                    res = firVal + secVal
+                elif obj == '-':
+                    res = firVal - secVal
+                elif obj == '*':
+                    res = firVal*secVal
+                else:
+                    res = firVal//secVal
+                val.push(res)
+            else:
+                val.push(int(obj))
+        # print(f'{val.pop()}')
+        return val.pop()
+```
