--- a/algs4/1.3/1319.md
+++ b/algs4/1.3/1319.md
@@ -43,3 +43,58 @@ def test1319(self, first: Node):
         res = max([first.item, self.max(first.next, res)])
         return res
 	```
+
+#### 1.3.29 题目：用环形链表实现 Queue，环形链表也是一条链表，只是没有任何结点的链接为空，且只要链表非空则 last.next 的值为 first。只能使用一个 Node 类型的实例变量。
+
+解答：first 可以通过 last.next 获取，所以只存一个 last 即可。在 `enque` 操作中是要在链表的尾节点插入新节点，所以先保存旧的尾节点，再生成新的节点，之后就要更新尾节点的 `next` 指针了。这里需要更新的有两部分：
+
+* 一个是要把旧的尾节点的 `next` 指向新增的节点，把新节点插入到链表中
+* 另外一个是把新的尾节点的 `next` 指向头节点。头结点在哪呢？当链表插入第一个元素时，我们把第一个节点的 `next` 指向它本身，这就作为最初始的头节点信息了。后序再插入新的元素时，我们只要从上一个尾节点中取出 `next` 信息更新下即可。
+
+另外在 `deque` 中，基本思路和非环形链表类似，从头部删除节点的操作，只不过头部节点现在需要以 `last.next` 获取，还要更新 `last.next` 为旧的头部节点的下个节点。
+
+据此，完成以下程序：
+
+``` python
+class RingQueue:
+    '''
+    * void enque(Item item)`
+	* `Item dequeue()`
+	* `boolean isEmpty()`
+	* `int size()`
+    '''
+    _N = 0
+    _last = None
+    _cur = None
+    def enqueue(self, item):
+        if item == None:
+            print('item should not be None')
+            return
+        n = self._last
+        self._last = Node()
+        self._last.item = item
+        if self.isEmpty():
+            self._last.next = self._last
+        else:
+            self._last.next = n.next
+            n.next = self._last
+        self._N += 1
+    
+    def deque(self):
+        if self.isEmpty():
+            print('Queue is empty')
+            return None
+        n = self._last.next
+        res = n.item
+        n = n.next
+        if self.isEmpty():
+            self._last = None
+        else:
+            self._last.next = n
+        self._N -= 1
+        return res
+    def isEmpty(self):
+        return self._N == 0
+    def size(self):
+        return self._N
+```
