--- a/car/911.md
+++ b/car/911.md
@@ -1,1 +1,18 @@
-保时捷 911 车型，从 1963 年诞生以来，走过了 57 个年头。今天我们来梳理一下这个传奇车型的历史。
+[保时捷 911](https://zh.wikipedia.org/wiki/%E4%BF%9D%E6%97%B6%E6%8D%B7911) 车型，从 1963 年诞生以来，走过了 57 个年头。今天我们来梳理一下这个传奇车型的历史。
+
+#### 车型的诞生
+说到 911，就不得不提到第一辆以保时捷命名的跑车-[保时捷356](https://zh.wikipedia.org/wiki/%E4%BF%9D%E6%97%B6%E6%8D%B7356)，因为 911 正是这款车型的全新升级和换代。
+
+二战之后，德国投降，作为曾经为纳粹设计过许多坦克的保时捷家族——保时捷的创始人费迪南德和他的女婿皮耶、儿子费里被法国以战争罪拘捕。1945 年底，三人被列为战犯，费里不久获释，但费迪南德和皮耶在监狱里未经审判被关了二十个月。这段时间内，费里在外靠设计新的跑车和维修旧车等工作，维持公司的运作。他根据原来的甲壳虫（费迪南德设计）的结构布局，设计了一款新的跑车——保时捷356。
+
+1963年，已经是 356 被推出以来的第15个年头，保时捷急需一款新车继承356的使命。这年的法兰克福车展上，保时捷 911 车型首次亮相。
+
+这里插个小话题，为什么名字叫 911 呢？
+
+保时捷和大众有着很深的渊源，甲壳虫是保时捷老爷子费迪南德设计的，356车型也和大众共用许多零配件，保时捷与大众还大量共用供应商体系，其内部系列代号从 100 到 800 都有车型占了，只有 900 系列空缺，所以自然而然叫 901。但是彼时的标致品牌已经在法国注册了从 101 到 909 所有中间有0的三位数，保时捷一来为了法国的市场，二来体量也比不过标致，因此做出让步，改叫 911。
+#### 911 的车型
+了解了911诞生的历史，我们再来看下 911 又细分哪些车型？这些车型都是 911，不过外形和动力有所区别，这么多年以来，保时捷也一直坚持着各个车型的发展。
+
+### 第一代
+### 第一代
+### 第一代
