--- a/algs4/1.3/1331.md
+++ b/algs4/1.3/1331.md
@@ -12,7 +12,14 @@
 * `void insertAfterNode(DoubleNode node, Item item)`
 * `Item deleteNode(DoubleNode node)`
 
-双向结点的定义：(待测试)
+双向结点的定义： ~~(待测试)~~
+
+头天晚上写完没测试，今天晚上测试了一下，发现了几个问题：
+
+1. `deleteAtFirst` 或者 `deleteAtLast` 方法中，要判断是不是仅剩一个结点，只剩一个结点是种特殊情况，把内部的 `_first` 和 `_last` 设置为空即可，需要单独处理。
+2. 在某个结点之前或者之后插入新结点时，首先需要判断目标结点是不是首尾结点，是的话也要单独处理。如果是中间结点，需要四个指针的更新，两个 `next` 和 两个 `pre`，注意好赋值顺序即可。
+
+最大的感受：链表之类的处理，如果是正常结点其实非常简单，难就难在首尾结点和特殊情况的处理，所以一定要重视！
 
 ``` python
 class DoubleNode:
@@ -46,7 +53,6 @@ class DoubleLinkedList:
             return
         n = DoubleNode()
         n.item = item
-        _N += 1
         if self.isEmpty():
             self._first = n
             self._last = n
@@ -54,6 +60,7 @@ class DoubleLinkedList:
             n.next = self._first
             self._first.pre = n
             self._first = n
+        self._N += 1
     
     def insertAtLast(self, item):
         if item == None:
@@ -61,7 +68,6 @@ class DoubleLinkedList:
             return
         n = DoubleNode()
         n.item = item
-        _N += 1
         if self.isEmpty():
             self._first = n
             self._last = n
@@ -69,15 +75,21 @@ class DoubleLinkedList:
             n.pre = self._last
             self._last.next = n
             self._last = n
+        self._N += 1
     
     def deleteAtFirst(self):
         if self.isEmpty():
             print('DoubleLinkedList is empty!')
             return
         n = self._first
-        self._first = self._first.next
-        self._first.pre = None
-        _N -= 1
+        if self._N == 1:
+            # 仅剩一个结点
+            self._first = None
+            self._last = None
+        else:
+            self._first = self._first.next
+            self._first.pre = None
+        self._N -= 1
         return n.item
     
     def deleteAtLast(self):
@@ -85,9 +97,14 @@ class DoubleLinkedList:
             print('DoubleLinkedList is empty!')
             return
         n = self._last
-        self._last = self._last.pre
-        self._last.next = None
-        _N -= 1
+        if self._N == 1:
+            # 仅有一个结点
+            self._first = None
+            self._last = None
+        else:
+            self._last = self._last.pre
+            self._last.next = None
+        self._N -= 1
         return n.item
 
     def insertBeforeNode(self, node: DoubleNode, item):
@@ -100,11 +117,11 @@ class DoubleLinkedList:
             # 头结点
             self.insertAtFirst(item)
         else:
+            n.next = node
             node.pre.next = n
             n.pre = node.pre
-            n.pre = node
             node.pre = n
-            _N += 1
+            self._N += 1
 
     def insertAfterNode(self, node: DoubleNode, item):
         if node == None or item == None:
@@ -114,13 +131,13 @@ class DoubleLinkedList:
         n.item = item
         if node.next == None:
             # 尾结点
-            self.insertAtLast()
+            self.insertAtLast(item)
         else:
-            node.next.pre = n
             n.next = node.next
-            n.pre = n
             node.next = n
-            _N += 1
+            n.pre = node
+            n.next.pre = n
+            self._N += 1
 
     def deleteNode(self, node: DoubleNode):
         if node == None:
@@ -132,7 +149,7 @@ class DoubleLinkedList:
         if pre == None and nex == None:
             # 孤立结点。python 无法修改外界 node 的指向
             node.item = None
-            _N -= 1
+            self._N -= 1
             return item
         elif pre == None:
             # 头结点
@@ -143,12 +160,51 @@ class DoubleLinkedList:
         else:
             pre.next = node.next
             node.next.pre = pre
-            _N -= 1
+            self._N -= 1
             return item
 
     def isEmpty(self):
-        return self._first == None
+        return self._N == 0
     def size(self):
         return self._N
 ```
 
+另附自己的测试 demo：
+
+自己的方法比较笨，就是断点调试，看 `next` 和 `pre`。其实可以在每次操作之后，打印出当前整条链表的值观察，有可能会更直观。
+
+``` python
+s = [1, 2, 5, 7 ,4]
+dl = DoubleLinkedList()
+for i in s:
+    dl.insertAtFirst(i)
+dl.insertAtLast(10)
+dl.insertAtLast(11)
+print(dl.deleteAtFirst())
+print(dl.deleteAtFirst())
+print(dl.deleteAtLast())
+print(dl.deleteAtLast())
+dl.insertBeforeNode(dl._first.next, 6)
+dl.insertAfterNode(dl._first.next, 7)
+dl.insertBeforeNode(dl._first, 4)
+dl.deleteNode(dl._first.next)
+dl.deleteNode(dl._first.next)
+dl.deleteNode(dl._first)
+dl.deleteNode(dl._last)
+dl.insertAfterNode(dl._last, 0)
+# print(dl.deleteAtLast())
+# print(dl.deleteAtLast())
+# print(dl.deleteAtLast())
+# print(dl.deleteAtLast())
+print(dl.deleteAtFirst())
+print(dl.deleteAtFirst())
+print(dl.deleteAtFirst())
+print(dl.deleteAtFirst())
+dl.insertAfterNode(dl._last, 0)
+print(dl.deleteAtLast())
+dl.insertBeforeNode(dl._first, 0)
+dl.insertAtLast(0)
+dl.insertAtLast(1)
+dl.insertAtFirst(2)
+print('')
+```
