--- a/car/911.md
+++ b/car/911.md
@@ -16,3 +16,16 @@
 ### 第一代
 ### 第一代
 ### 第一代
+
+参考链接：
+
+* [保时捷官网-分享您的故事](https://www.porsche.cn/microsite/911/china/main)
+* [汽车之家-911发展历史回顾](https://www.autohome.com.cn/culture/201604/886696-2.html?pvareaid=3311700)
+* [保时捷官网-Targa历史回顾](https://newsroom.porsche.com/zh/2020/product/cn-porsche-911-targa-generations-history-21022.html)
+* [搜狗问问](https://ld.sogou.com/article/i5633097.htm?ch=lds.pc.sh.media.all#:~:text=%E4%BF%9D%E6%97%B6%E6%8D%B7911%E6%98%AF%E7%94%B1%E5%BE%B7%E5%9B%BD,%E7%9A%84%E6%9B%B4%E5%90%8D%E4%B8%BA%E2%80%9C911%E2%80%9D%E3%80%82)
+* [保时捷911车为什么叫911](https://zhuanlan.zhihu.com/p/20290574)
+* [维基-保时捷](https://zh.wikipedia.org/wiki/%E4%BF%9D%E6%97%B6%E6%8D%B7)
+* [维基-保时捷911](https://zh.wikipedia.org/wiki/%E4%BF%9D%E6%97%B6%E6%8D%B7911)
+* [维基-大众甲壳虫](https://zh.wikipedia.org/wiki/%E5%A4%A7%E4%BC%97%E7%94%B2%E5%A3%B3%E8%99%AB)
+* [维基-保时捷365](https://zh.wikipedia.org/wiki/%E4%BF%9D%E6%97%B6%E6%8D%B7356)
+* [维基-斐迪南·保时捷](https://zh.wikipedia.org/wiki/%E6%96%90%E8%BF%AA%E5%8D%97%C2%B7%E4%BF%9D%E6%99%82%E6%8D%B7)
