--- a/algs4/1.3/1335.md
+++ b/algs4/1.3/1335.md
@@ -1,6 +1,13 @@
 #### 1.3.35 题目：随机队列。比队列的 api 多一个 `Item sample()` 方法，随机返回一个元素但不删除。编写一个 `RandomQueue` 类实现。提示：使用能够动态调整大小的数组表示数据，删除元素时，随机交换某个元素和末尾元素。
 
 解答：
+
+重要的东西放上边：
+
+这里学到一个 python3 不换行打印的小技能：
+`print` 的原型是 `print(*objects, sep=' ', end='\n', file=sys.stdout, flush=False)`，默认是换行的，所以只要给 `end` 赋值空就可以不换行打印，像这样
+`print(f'{card.shape}{card.num} ', end='')`
+
 题目不难，参考上一个题目中实现的 `Deque` 即可完成。`sample()` 我这里是随机产生一个列表元素总数的随机数，然后将其对应下标的元素和第一个元素交换。
 
 ``` python
