--- a/algs4/1.3/1337.md
+++ b/algs4/1.3/1337.md
@@ -1,4 +1,4 @@
-#### 1.3.35 题目：Josephus 问题。N 个身陷绝境的任一致同意通过以下方式减少生存人数。围坐成一圈，位置记为 0 到 N-1并从第一个人开始报数，报到 M 的人会被杀死，直到最后一个人留下来。编写一个 Queue 的用例 Josephus，从命令行接受 N 和 M 并打印出人们被杀死的顺序。例如：
+#### 1.3.37 题目：Josephus 问题。N 个身陷绝境的任一致同意通过以下方式减少生存人数。围坐成一圈，位置记为 0 到 N-1并从第一个人开始报数，报到 M 的人会被杀死，直到最后一个人留下来。编写一个 Queue 的用例 Josephus，从命令行接受 N 和 M 并打印出人们被杀死的顺序。例如：
 ``` python
 Josephus 7 2
 1 3 5 0 4 2 6
@@ -25,3 +25,23 @@ def Josephus(self, m:int, n:int):
     print(q.dequeue())
     print('')
 ```
+
+#### 1.3.38 题目：删除第 k 个元素。需要支持的 API：
+* `GeneralizedQueue()`
+* `boolean isEmpty()`
+* `void insert(Item x)`
+* `Iterm delete(int k)`
+
+解答：
+
+1. 数组实现的形式。注意点有：
+	* 按照固定顺序插入即可查到最早插入的第 k 个元素，例如一直在数组后边追加元素，这样第k个下标的元素就是目标元素
+	* 使用可变数组的思路，在 `insert` 操作的时候，检查数组的长度是否已经增长到了当前数组支持的最大长度，如果到了就翻倍数组的长度。同理在 `delete` 时需要缩小数组的长度
+
+2. 链表的实现形式。
+	* 一直在链表的尾结点插入新的元素
+	* `delete` 操作即删除第 k 个结点
+
+#### 1.3.39 题目：环形缓冲区。环形队列，定长为 N 的先进先出的数据结构。当缓冲区为空时，消费者会在数据存入缓冲区以前等待；当缓冲区满时，生产者会等待将数据存入缓冲区。为 RingBuffer 设计一份 API 并用数组将其实现。
+
+解答：
