--- a/car/911.md
+++ b/car/911.md
@@ -16,22 +16,50 @@
 * `911 Carrera`：911 的基本款。`Carrera` 这个名字来自于20世纪50年代锁具班的泛美越野大赛（`Carrera Panamericana`），保时捷赢得了1953年小型车级别的冠军，之后便将旗下的许多车型加以卡雷拉的后缀以资纪念。
 * `911 Carrera Cabriolet`：911 基本款的敞篷版。
 * `911 Carrera S`：`S` 代表 `super`。911 加强版，其对应的也有 `Cabriolet` 版本。
-* * `911 Carrera 4`：`4` 代表四轮驱动。
+* `911 Carrera 4`：`4` 代表四轮驱动。
 * `911 Carrera 4S`：四轮驱动的加强版。
 * `911 Targa 4`：也是敞篷版本。`Targa` 名字是为了纪念保时捷在意大利西西里岛 `Targa Florio` 赛车获得了5长胜利的光荣历史。保时捷推出这款车的原因是因为美国法律禁止敞篷车上路，敞篷车侧翻时没有车顶保护，保时捷为了争取美国市场，推出了 `Targa` 车型——采用可拆卸的玻璃车顶。现在新的车型车顶不可拆卸，不过可以电动收到后备箱。
 * `911 Targa 4S`：同 `4S`。
 * `911 Turbo S`：更偏重运动化的车型，从发动机功率到刹车、外观组件和车身都有所不同，性能更加强悍。
 * `911 Turbo S Cabriolet`：敞篷版本。
 
-总结：911里也可以再细分，大致有`Carrera`、`Targa` 和 `Turbo` 三个车系。
+总结：911里也可以再细分，大致有`Carrera`、`Targa` 和 `Turbo` 三个车系，每个车系又会细分车型，4 代表四轮驱动，`S`代表`super`加强版，`Cabriolet`代表敞篷版。
 
-### 第一代
-### 第一代
+### 第一代 901
+开篇啰嗦了一大堆，现在终于要讲到主题了。
+保时捷911首次亮相是在1963年9月12日的法兰克福国际车展上，这是一款被称为901的全新跑车产品，它的出现是为了接班保时捷356跑车，它的"心脏"更为强劲——由356上的1.6升4缸发动机升级为1.991升6缸发动机，最大功率130匹，配备5速手动变速箱。
+
+1965 年法兰克福车展上，保时捷推出 911 Targa 车型——B柱处一个20cm宽的防滚架和可拆卸车顶与后窗。
+
+1966 年为了填补356和911之间的市场空缺，保时捷推出了912车型——4缸1.6升发动机，其余和911基本一致。同年，保时捷又推出了加强版本的911——911S，在化油器上有调整，调整之后的输出功率达到160匹，同时采用了比较经典的设计 `Fuchs` 车轮，但是直到1969年这款车一直没能进入美国市场，该车型后续发动机又升级至2.4升，功率提升至190马力。
+
+1967 年秋天，采用 2.0升发动机110马力的 911T 作为比 911S 更入门的型号出现，同时取代了 912 车型。
+
+1968 年价格较为昂贵的 911L 被推出，相比基本款，911L 在舒适型上有所升级，`L` 可能就是代表`Luxury`，后续又采用了升级版的 130 匹马力的发动机和从 911S 上沿袭下来的制动系统。
+
+1969 年发布了 911E，这款车型旨在取代 911L，作为 911T 和 911S 中间的版本。`E`代表德文`Einspritzung`，象征着保时捷和博世共同开发的MFI(`Mechanical fuel injection`)机械式燃油喷射技术。同年，所有的 911 车型在车身长度不变的前提下，轴距均增加了57mm，达到2268mm，提升了行驶稳定性。
+
+1972 年巴黎车展上保时捷推出了 `911 Carrera RS 2.7`，`RS` 代表德语 `Rennsport`，即赛车竞赛的意思。这是第一款 `Carrera` 车型，它的诞生就是为了比赛，不过参加`FIA Group4` 赛事有一个限制，车辆销量必须达到500辆，保时捷对这个目标没多少信心，不过一经推出`911 Carrera RS`就供不应求，最终保时捷不仅完全够资格参加`Group4`的比赛，还达到了`Group3`的参赛条件——量产1000辆。`911 Carrera RS`最显著的外观变化就是增加了用于稳定的鸭尾式尾翼，发动机排量为2.7升，功率达到了210马力，极速每小时245公里。此外还有49台`Carrera RS` 车型配备了2.8升发动机，功率高达300马力。
+为了应对1974年的世界冠军赛（`IROC`），保时捷还生产了3.0升排量的`911 Carrera RSR`车型。1974年，生产了`911 Carrera RS 3.0`车型，采用了3.0升排量发动机，功率高达230马力，价格几乎是`911 Carrera RS 2.7` 的两倍！
+
+### 第二代 911G/930
+1974年，第一代 911 不知不觉间已经走过了十个年头，它也正式迎来第二个版本——911G。没有字母后缀的 911 再次取代911E成为标准款的 911，发动机排量提升至2.7升，功率提升至150马力，911S为175马力。为了满足美国出台的新车在以低于 8km/h 的车速前进和倒退时都能承受碰撞而不受伤害的规定，前后保险杠也经过了重新设计——带橡胶伸缩缝，这种保险杠可以压缩50mm而不对骑车主体部件造成任何伤害。除了美国之外的市场，这成为了可选装的设计。此外三点式安全带、带头枕的座椅也成为了标配，方向盘的样式也有所调整。关于车型代号，1974到1976年的代号分别为G、H、J、K，1976年911基本款的发动机功率提升至165马力，和911S只差了10马力。
+
+同年，搭载与上一代`911 Carrera RS 2.7` 相同排量的发动机的 `911 Carrera 2.7 MFI` 版本也被推出，最大功率 210 马力，不过当这个2.7 的版本推向北美市场时，就变成了`Carrera RS 2.7 CIS`版本，功率降低到175马力。而且鸭尾式尾翼在美国是标配，其他市场则为选装，除了德国，在德国，鸭尾式尾翼被认为是不合法的，因此保时捷设计了鲸式尾翼，该尾翼样式后被`930 Turbo`车型继承。1976年，`Carrera RS 2.7` 被 `Carrera RS 3.0`取代，换装和 `930 Turbo` 去掉增压器类似的发动机，最大功率200马力，虽然没有前代2.7的功率大，但是扭矩有所提升，0-100km/h 的加速时间和前代保持一致。
+
+1975年，保时捷推出了第一款涡轮增压的911——`911 Carrera Turbo 3.0`，内部代号930。有了涡轮增压的加持，这台发动机的最大功率高达260马力。
+
+1978年，保时捷对930发动机有所调整——排量增大至3.3升，最大功率提升至300马力，同时尾翼有所调整，由鲸式尾翼改为"茶盘"式尾翼。同时，`Carrera` 的称号也被简化掉，``911 Carrera Turbo`变成了`911 Turbo`，并一直延续至今。930车型的寿命非常长，直到1990年才被 `964 Turbo` 车型取代。
+
+同年，保时捷又推出了一款新的911车型——`911SC`取代`911 Carrera`作为911系列的标准款，不过1984年`SC`又被`911 Carrera`取代。`SC` 代表 `Super Carrera`，`SC`的代号并不是第一次出现，之前有保时捷`365SC`车型。发动机排量3.0升，最大功率180马力，1980年升级至188马力，1981年又升级至204马力，但其排量一直都是 3.0升。
+
+这里补充一点关于代号的说明，保时捷官网把第二代保时捷称作911G，有的车迷会用930指代第二代，因为这是保时捷风冷发动机和增压发动机的分水岭，也没错，只是角度不一样。
 ### 第一代
 
 参考链接：
 
 * [保时捷官网-分享您的故事](https://www.porsche.cn/microsite/911/china/main)
+* [classicdriver](https://www.classicdriver.com/en/car/porsche)
 * [汽车之家-911发展历史回顾](https://www.autohome.com.cn/culture/201604/886696-2.html?pvareaid=3311700)
 * [保时捷官网-Targa历史回顾](https://newsroom.porsche.com/zh/2020/product/cn-porsche-911-targa-generations-history-21022.html)
 * [搜狗问问](https://ld.sogou.com/article/i5633097.htm?ch=lds.pc.sh.media.all#:~:text=%E4%BF%9D%E6%97%B6%E6%8D%B7911%E6%98%AF%E7%94%B1%E5%BE%B7%E5%9B%BD,%E7%9A%84%E6%9B%B4%E5%90%8D%E4%B8%BA%E2%80%9C911%E2%80%9D%E3%80%82)
