--- a/algs4/1.3/1333.md
+++ b/algs4/1.3/1333.md
@@ -1,4 +1,4 @@
-#### 1.3.32 题目：Deque。一个双向队列和栈或队列类似，但它同事支持在两端添加或删除元素。其支持的 API 有：
+#### 1.3.32 题目：Deque。一个双向队列和栈或队列类似，但它同时支持在两端添加或删除元素。其支持的 API 有：
 
 * `boolean isEmpty()`
 * `int size()`
