--- a/car/911.md
+++ b/car/911.md
@@ -54,7 +54,7 @@
 同年，保时捷又推出了一款新的911车型——`911SC`取代`911 Carrera`作为911系列的标准款，不过1984年`SC`又被`911 Carrera`取代。`SC` 代表 `Super Carrera`，`SC`的代号并不是第一次出现，之前有保时捷`365SC`车型。发动机排量3.0升，最大功率180马力，1980年升级至188马力，1981年又升级至204马力，但其排量一直都是 3.0升。
 
 这里补充一点关于代号的说明，保时捷官网把第二代保时捷称作911G，有的车迷会用930指代第二代，因为这是保时捷风冷发动机和增压发动机的分水岭，也没错，只是角度不一样。
-### 第一代
+### 第三代 964
 
 参考链接：
 
