--- a/car/911.md
+++ b/car/911.md
@@ -55,6 +55,17 @@
 
 这里补充一点关于代号的说明，保时捷官网把第二代保时捷称作911G，有的车迷会用930指代第二代，因为这是保时捷风冷发动机和增压发动机的分水岭，也没错，只是角度不一样。
 ### 第三代 964
+保时捷内部将第三代 911 称为 964 型。1989 年，四轮驱动的 `911 Carrera 4`作为第三代911的第一个车型被推向了市场。这套四驱系统其实移植自 959 车型（后置四驱赛车，曾经参与过达喀尔拉力赛并获得冠军）。除了四驱系统，车身底盘也是新设计的，发动机排量也提升至 3.6升，功率达250马力。保险杠也变得更加圆润，当车速高于80公里每小时后，后部的扰流器还会自动展开。虽然造型上和上一代没有很大差别，但85%的零部件时重新设计开发的。
+
+1990 年，`911 Carrera 2`——后轮驱动版本的911也被推出，同时其搭载的 `Tiptronic` 手自一体变速器也随之亮相。
+
+1991 年，`911 Turbo` 的继任车型——`964 Turbo`亮相，在1991-1993年间生产的 `964 Turbo` 车型搭载的还是上一代的 3.3升引擎，最大功率320马力。1994年，发动机改为新 911 上的 3.6升引擎，最大输出功率达 360马力。直到1994年，随着993的发布，`964 Turbo`也越来越稀有。
+
+1992 年，参考过去的2.7、3.0 RS 和 RSR，保时捷再次推出 911 `RS` 版本。为了减轻重量，内部的后座、空调、电动车窗等设备都被拆掉，车门和车身也大量使用了铝合金。种种举措最终使得其比标准版的 `Carrera 2`轻上了120多千克。发动机排量仍是 3.6升，功率相比标准版提升了10马力，车身降低 40mm。说到这里还有一则小趣事，本来保时捷并未把 `Carrera RS` 车型推向美国市场，因为这种类型的车调教很激进，和美国市场的定位并不相符，后来保时捷为了参加 `Porsche Carrera Cup`竞赛，进口到美国45辆经过略微改装的 `RS` 车型，不幸的是比赛因为没有拉到足够的赞助商而取消，这45辆`RS`在没有打任何广告宣传的情况下，居然都卖完了。后来保时捷在1993年基于美国版本的 `Carrera 2`专门生产了 `RS America` 型号。
+
+1993 年，RS 换装涡轮增加发动机，排量提升至3.8升，最大功率提升至300马力，因此也叫做`911 Carrera RS 3.8`。
+
+### 第四代 993
 
 参考链接：
 
