--- a/algs4/1.3/1345.md
+++ b/algs4/1.3/1345.md
@@ -1,1 +1,5 @@
 #### 1.3.45 题目：栈的可生成性。假设我们的栈测试用例将会进行一系列混合的入栈和出栈操作，序列中的整数0，1，...，N-1表示入栈操作，N 个减号代表出栈操作。设计一个算法，判定给定的混合序列是否会使数组向下溢出（你所使用的空间量与 N 无关，即不能用某种数据结构存储所有的整数）。设计一个线性时间的算法判定我们的测试用例能否产生某个给定的排列（这取决于出栈操作指令出现的位置）。
+
+解答：
+
+该题目和之前的 [133：不可能序列](https://github.com/hexintao/blog/blob/master/algs4/1.3/133.md) 类似。
