--- a/car/911.md
+++ b/car/911.md
@@ -66,6 +66,8 @@
 1993 年，RS 换装涡轮增加发动机，排量提升至3.8升，最大功率提升至300马力，因此也叫做`911 Carrera RS 3.8`。
 
 ### 第四代 993
+1994 年，保时捷推出了新一代的 911，内部代号 `993`。这也是最后一代采用风冷水平对置发动机的 `911`，因此格外受车迷和收藏爱好者的青睐。和上代 964 相比，993 从内到外都有很大的改变。发动机方面，仅有20%的零件是沿用自上一代，排量维持3.6升，最大功率却进一步提升，达到272马力，1996 年搭载了`VarioRam`（可变正时气门）技术后更是提升至286马力。底盘采用了全新的铝制材料，后悬架首次采用多连杆结构（最初是在未量产的989车型上采用），提升了操控。
+外观方面，更加流畅的曲线设计、集成式的保险杠，椭圆型的头灯，即使放到现在也丝毫没有过时的感觉。同时，这也是保时捷首次为911搭载6速手动变速器。
 
 参考链接：
 
