--- a/car/911.md
+++ b/car/911.md
@@ -69,6 +69,25 @@
 1994 年，保时捷推出了新一代的 911，内部代号 `993`。这也是最后一代采用风冷水平对置发动机的 `911`，因此格外受车迷和收藏爱好者的青睐。和上代 964 相比，993 从内到外都有很大的改变。发动机方面，仅有20%的零件是沿用自上一代，排量维持3.6升，最大功率却进一步提升，达到272马力，1996 年搭载了`VarioRam`（可变正时气门）技术后更是提升至286马力。底盘采用了全新的铝制材料，后悬架首次采用多连杆结构（最初是在未量产的989车型上采用），提升了操控。
 外观方面，更加流畅的曲线设计、集成式的保险杠，椭圆型的头灯，即使放到现在也丝毫没有过时的感觉。同时，这也是保时捷首次为911搭载6速手动变速器。
 
+1995 年，`Turbo` 车型推出，它搭载了全新的3.6升双涡轮增压发动机，最大功率高达408马力！0-97km/h 3.2s，刹停2.3s，最高车速 322km/h，车尾上有固定的`鲸鱼尾`式尾翼。这也是第一代搭载四轮驱动系统的 `911 Turbo` 车型。从 993 推出的第二年开始，保时捷又推出了 `Turbo` 的加强版——`Turbo S`，其搭载了更高规格的发动机，最高功率提升至450马力，外观方面相比于 `Turbo` 车型比较明显的变化有：黄色的卡钳，更大的尾翼、四排气管设计以及后轮眉上为了冷却发动机而开的进气口等。
+
+同年，保时捷又推出了 `Carrera` 的轻量版车型——`Carrera RS` ，搭载 3.8升自然吸气发动机，最高功率300马力，通过一系列减重措施，最终使得 `Carrera RS` 比普通版轻了90公斤。
+
+1996 年，保时捷推出了新的 `Targa` 车型。相比于之前手动拆除的车顶，这代车型安装了一个宽大的电动玻璃车顶。
+
+1997 年，保时捷又相继推出了 `Carrera 4S`和`Carrera S` 车型，`Carrera S`因为少了四驱系统，质量上少了近40公斤，所以加速表现和最高速度均略好于 `Carrera 4S` 车型，同时 `Carrera S` 的后轮胎比普通版的要宽，所以在公路上的操控性比普通版的好，因此，`Carrera S` 也是最保值的 993 的车型之一。
+
+`911 GT2`，基于 `Turbo` 车型打造的 `GT2` 车型最初是为了参加 `FIA GT2` 组比赛而打造的，为了减重去掉了 `Turbo` 车型上的四驱系统，3.6升的发动机最大功率430马力，1998年更是升级到450马力。硕大的尾翼，低趴的造型，这一切都标识着它的赛车属性。
+
+1997年，保时捷也推出了可以合法上路的民用车型`911 GT`，相比于 `Turbo` 车型，增压器的压力值有所调高，将发动机压榨出430马力的功率，1998年，增加了`双路点火系统`（`twin igition system`），功率提升至450马力！`911 GT` 车型总共仅有57辆。
+
+从996开始，保时捷911车型迈入了新的水冷发动机时代。
+
+### 第五代 996
+1997 年法兰克福车展上，保时捷推出第五代911，内部代号996。外观上最明显的区别就是采用了泪囊式的打灯，这是911首次不再使用其标志性的蛙眼大灯。车身比上一代加长了185mm，轴距增加了80mmm，车宽也相应增加了30mm，使得车内空间更加宽敞。仪表盘也一改之前相互独立的五个圆盘变成了相互融合的式样。
+
+作为第一代采用水冷发动机的 `Carrera`，`996 Carrera`的发动机排量反而缩水至 3.4升，最大功率相反却提升至300马力。
+
 参考链接：
 
 * [保时捷官网-分享您的故事](https://www.porsche.cn/microsite/911/china/main)
