--- a/car/911.md
+++ b/car/911.md
@@ -84,9 +84,22 @@
 从996开始，保时捷911车型迈入了新的水冷发动机时代。
 
 ### 第五代 996
-1997 年法兰克福车展上，保时捷推出第五代911，内部代号996。外观上最明显的区别就是采用了泪囊式的打灯，这是911首次不再使用其标志性的蛙眼大灯。车身比上一代加长了185mm，轴距增加了80mmm，车宽也相应增加了30mm，使得车内空间更加宽敞。仪表盘也一改之前相互独立的五个圆盘变成了相互融合的式样。
+二十世纪90年代，有传言保时捷面临着财务上的压力有可能被收购，上一代风冷911也尽显销量增长上的乏力，再加上全球日渐严苛的排放标准，保时捷迫切需要对发动机进行大的改革。为了提高生产效率，保时捷还从丰田身上寻求指导，在这种大背景下，1997 年法兰克福车展上，保时捷推出第五代911，内部代号996。
 
-作为第一代采用水冷发动机的 `Carrera`，`996 Carrera`的发动机排量反而缩水至 3.4升，最大功率相反却提升至300马力。
+外观上最明显的区别就是采用了泪囊式的大灯，这是911首次不再使用其标志性的蛙眼大灯，这背后的原因一是保时捷内部也想重新打造911车型引领下个世代，二是为了和新的入门车型`Boxter`共用零件，降低成本，这一点后来一直被大家所诟病，因为车主们觉得自己的车`跌份儿`了。车身比上一代加长了185mm，轴距增加了80mmm，车宽也相应增加了30mm，使得车内空间更加宽敞。仪表盘也一改之前相互独立的五个圆盘变成了相互融合的式样。作为第一代采用水冷发动机的 `Carrera`，`996 Carrera`的发动机排量反而缩水至 3.4升，最大功率相反却提升至300马力。1999年的 `Carrera 4`车型上，保时捷首次搭载了`保时捷稳定管理系统（PSM）`。2003 年又推出了40周年纪念版的911，发动机升级至3.6升，功率提升至345马力。
+
+1999 年的法兰克福车展上，996 版的 `Turbo` 车型姗姗来迟。搭载了四轮驱动系统和3.6升双涡轮增压发动机，源自上代勒芒赛事冠军——`911 GT1`，最高功率420马力，同年标准版的 `Carrera` 的输出功率也增加了5马力。2002年`Turbo`车型换了更大型号的涡轮后，最高功率提升至450马力。
+
+2002 年，基本款的 `Carrera` 换装3.6升发动机，功率增加了15马力，同时倍受诟病的前大灯也有所调整，采用了和`Turbo`车型一样的设计。同年，`Targa` 车型也被推出，车顶结构和上代类似。此外，`Carrera 4S`也在这一年推出。
+
+2005 年，`Turbo S` 车型发布，首次搭载了保时捷碳陶瓷制动系统（`PCCB`）。
+
+随着996取代了993车型，保时捷在花了两年时间打造新款的`GT2`之后，转而专心准备`GT3`比赛，所以996这一代的`GT`型号为`996 GT3`，`GT2` 这个型号完全进入民用领域。2001年，保时捷推出了纯公路型996世代的`911 GT2`，它搭载了`GT3`上的3.6升双涡轮增压发动机，可以输出462马力，后续更是被调教出483马力！同样也是轻量化设计及赛车造型。
+
+公路版本的 `GT3` 分两个型号，`Mark Ⅰ`搭载3.6升自然吸气发动机，最高功率360马力。`Mark Ⅱ`基于中期改款后的996打造，同样是3.6升发动机，最大功率提升至381马力。
+
+### 第五代 996
+
 
 参考链接：
 
