--- a/car/911.md
+++ b/car/911.md
@@ -69,7 +69,7 @@
 1994 年，保时捷推出了新一代的 911，内部代号 `993`。这也是最后一代采用风冷水平对置发动机的 `911`，因此格外受车迷和收藏爱好者的青睐。和上代 964 相比，993 从内到外都有很大的改变。发动机方面，仅有20%的零件是沿用自上一代，排量维持3.6升，最大功率却进一步提升，达到272马力，1996 年搭载了`VarioRam`（可变正时气门）技术后更是提升至286马力。底盘采用了全新的铝制材料，后悬架首次采用多连杆结构（最初是在未量产的989车型上采用），提升了操控。
 外观方面，更加流畅的曲线设计、集成式的保险杠，椭圆型的头灯，即使放到现在也丝毫没有过时的感觉。同时，这也是保时捷首次为911搭载6速手动变速器。
 
-1995 年，`Turbo` 车型推出，它搭载了全新的3.6升双涡轮增压发动机，最大功率高达408马力！0-97km/h 3.2s，刹停2.3s，最高车速 322km/h，车尾上有固定的`鲸鱼尾`式尾翼。这也是第一代搭载四轮驱动系统的 `911 Turbo` 车型。从 993 推出的第二年开始，保时捷又推出了 `Turbo` 的加强版——`Turbo S`，其搭载了更高规格的发动机，最高功率提升至450马力，外观方面相比于 `Turbo` 车型比较明显的变化有：黄色的卡钳，更大的尾翼、四排气管设计以及后轮眉上为了冷却发动机而开的进气口等。
+1995 年，`Turbo` 车型推出，它搭载了全新的3.6升双涡轮增压发动机，最大功率高达408马力！最高车速 322km/h，车尾上有固定的`鲸鱼尾`式尾翼。这也是第一代搭载四轮驱动系统的 `911 Turbo` 车型。从 993 推出的第二年开始，保时捷又推出了 `Turbo` 的加强版——`Turbo S`，其搭载了更高规格的发动机，最高功率提升至450马力，外观方面相比于 `Turbo` 车型比较明显的变化有：黄色的卡钳，更大的尾翼、四排气管设计以及后轮眉上为了冷却发动机而开的进气口等。
 
 同年，保时捷又推出了 `Carrera` 的轻量版车型——`Carrera RS` ，搭载 3.8升自然吸气发动机，最高功率300马力，通过一系列减重措施，最终使得 `Carrera RS` 比普通版轻了90公斤。
 
@@ -98,7 +98,22 @@
 
 公路版本的 `GT3` 分两个型号，`Mark Ⅰ`搭载3.6升自然吸气发动机，最高功率360马力。`Mark Ⅱ`基于中期改款后的996打造，同样是3.6升发动机，最大功率提升至381马力。
 
-### 第五代 996
+### 第六代 997
+2004 年，取代 996 世代的 997 世代的 911 登场。最明显的变化是前大灯取消了996上备受争议的泪囊式大灯，再次回归经典的"蛙眼"，18寸的大轮毂也是标配，方向盘由传统的四辐式造型变成三辐式，风阻系数降低至0.28。虽然外观上的差别比较明显，动力上也有所提升，但是997还是沿用996的平台，相比前代是进化而不是革新。最先登场的车型是基准款 `Carrera` 和 `Carrera S coupes`。基本款的 911 搭载 3.6升发动机，最大功率325马力。`S` 车型上搭载 3.8升，最大功率355的发动机，同时轮毂尺寸、刹车都更大更强。
+
+2005年11月，`Carrera 4` 和 `Carrera 4S` 车型也相继推出。
+
+2006 年，`Turbo`车型上市，转向灯改为 LED 并放置在前进气口上方，前雾灯放置在转向灯两侧，后轮轮眉前依然开有巨大的进气口。3.6升双涡轮增压发动机可以压榨出480马力的功率！
+运用了"可变截面涡轮增压器"，简称`VTG`技术，低压的时候可以先启动小涡轮加快动力响应，高压的时候再启动大涡轮，减轻涡轮迟滞。2009年，发动机排量增加至3.8升，最大功率提升至493马力！2010年，新的`Turbo S`车型上市，搭载`PDK`变速箱和重新调教的涡轮增压发动机，最大功率达到恐怖的523马力！
+同年，`GT3` 车型上市，`GT3` 搭载了3.6升发动机，最大功率415马力。前"发动机盖"下部开有进气口，加速散热，尾部有固定的尾翼，提升下压力，底盘高度被相应降低。
+
+2007 年，`GT2` 上市，它同样搭载了类似`Turbo`车型上的`VGT`3.6升双涡轮增压发动机，最大功率530匹马力，和 `Turbo` 车型不一样的是它为了减轻重量采用了后轮驱动形式。因此，`GT2`一经推出，就是到当时为止，保时捷对外公开销售的马力最强劲的911！极速超过`329km/h`！外观上和`Turbo`不同的点在于在转向灯两侧没有了前雾灯，尾翼尺寸也更大。此外还有移出了大部分舒适型配置的`GT3 RS` 车型，2007年，又推出了`GT3 RS`车型的赛道版本（`racing version`），`GT3 RSR`。
+
+2008 年中期改款，保时捷使用了缸内直喷技术，并引入了双离合器变速箱`PDK`。更新后的997速度更快，重量更轻并且燃油经济性更高。`Turbo`车型升级了四轮驱动系统，加入了新的`力矩矢量`控制系统。
+
+2011 年，保时捷又推出一款新的介于 `Carrera` 和 `GT3` 之间的车型——`Carrera GTS`，拥有宽体车身，搭载3.8升发动机，413马力的输出功率。同年也推出了四驱版本的`Carrera 4 GTS`，此外还有限量356台，为了致敬经典车型`356 Speedster`的 `911 SpeedSter`。四月份，保时捷推出了最后一款 997 车型——`GT3 RS 4.0`，搭载4.0升发动机，最大功率500马力。
+
+这一代保时捷推出了大大小小24种不同的型号，消费者有了更大的选择范围（当然不包括我~），但是整理起来贼费劲。。。
 
 
 参考链接：
